--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
         <p id="en" class="setting-param current" data-translate>English</p>
         <p id="ru" class="setting-param" data-translate>Russian</p>
       </div>
-    </div><br>
+    </div>
     <div class="settings-section">
       <p class="settings-section-name" data-translate>Report a problem:</p>
       <div class="setting">
-        <form action="javascript:;" onsubmit="report(msg.value);">
+        <form action="javascript:;" onsubmit="sendReport(msg.value);">
           <i class="material-icons spinner">report</i>
           <input type="text" name="msg" id="msg" placeholder="Your message" required>
         </form>
       </div>
-    </div><br>
+    </div>
   </div>
 
   <div id="content">
