--- a/author.html
+++ b/author.html
@@ -63,7 +63,7 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
       <div class="setting">
         <form action="javascript:;" onsubmit="sendReport(msg.value);">
           <i class="material-icons spinner">report</i>
-          <input type="text" name="msg" id="msg" placeholder="Your message" required>
+          <input type="text" name="msg" id="msg" placeholder="Your message" maxlength="100" required>
         </form>
       </div>
     </div>
