--- a/account.html
+++ b/account.html
@@ -73,18 +73,20 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
     <div id="log-reg-menu" class="log-reg">
       <div id="log-menu">
         <form action="javascript:;" onsubmit="login(uname.value, pass.value);">
-          <label for="uname" data-translate>First name:</label>
-          <input type="text" name="uname" id="uname" placeholder="username" minlength="4" maxlength="12" required>
-          <label for="pass" data-translate>First name:</label>
+          <label for="uname" data-translate>*Username:</label>
+          <input type="text" name="uname" id="uname" placeholder="username" minlength="4" maxlength="12"
+          pattern="[A-Za-zА-Яа-я1-9]" title="Write your alphanumeric username" required>
+          <label for="pass" data-translate>*Password:</label>
           <input type="text" name="pass" id="pass" placeholder="password" minlength="4" maxlength="12" required>
           <input type="submit" value="send">
         </form>
       </div>
       <div id="reg-menu" class="log-reg">
         <form action="javascript:;" onsubmit="register(uname.value, pass.value);">
-          <label for="uname" data-translate>First name:</label>
-          <input type="text" name="uname" id="uname" placeholder="username" minlength="4" maxlength="12" required>
-          <label for="pass" data-translate>First name:</label>
+          <label for="uname" data-translate>*Username:</label>
+          <input type="text" name="uname" id="uname" placeholder="username" minlength="4" maxlength="12"
+          pattern="[A-Za-zА-Яа-я1-9]" title="Come up with an alphanumeric username" required>
+          <label for="pass" data-translate>*Password:</label>
           <input type="text" name="pass" id="pass" placeholder="password" minlength="4" maxlength="12" required>
           <input type="submit" value="send">
         </form>
