--- a/author.html
+++ b/author.html
@@ -74,6 +74,6 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
   </div>
 
   <script src="src/main.js"></script>
-  <script src="src/bundle/bundle.js"></script>
+  <script src="src/bundle/main.bundle.js"></script>
 </body>
 </html>
