--- a/account.html
+++ b/account.html
@@ -97,6 +97,7 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
     </div>
   </div>
 
+  <link rel="stylesheet" href="src/account.css">
   <script src="src/main.js"></script>
   <script src="src/bundle/main.bundle.js"></script>
   <script src="src/bundle/account.bundle.js"></script>
