--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
     <p style="font-size: 50vw; text-align: center;">ind</p>
   </div>
 
+  <link rel="stylesheet" href="src/index.css">
   <script src="src/main.js"></script>
   <script src="src/bundle/main.bundle.js"></script>
 </body>
