--- a/author.html
+++ b/author.html
@@ -12,7 +12,7 @@ ma, ma., madot, ma dot, ma_dot, makak, ma kak, makaksi, ma kak si, ma.kak.si,
 mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
 
   <link rel="icon" type="image/png" href="src/imgs/ma-icon.png">
-  <link rel="stylesheet" href="src/main.css">
+  <link rel="stylesheet" href="src/css/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <title id="title">ma.</title>
@@ -73,8 +73,7 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
     <p style="font-size: 50vw; text-align: center;">aut</p>
   </div>
 
-  <link rel="stylesheet" href="src/author.css">
-  <script src="src/main.js"></script>
-  <script src="src/bundle/main.bundle.js"></script>
+  <link rel="stylesheet" href="src/css/author.css">
+  <script src="src/js/main.js"></script>
 </body>
 </html>
