--- a/account.html
+++ b/account.html
@@ -102,8 +102,9 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
         <p class="link" onclick="logregForms(1, 0)" data-translate>Login form</p>
       </form>
     </div>
-    <div id="account">
-
+    <div id="profile" style="display: none;">
+      <div id="avatar"></div>
+      <p id="username"></p>
     </div>
   </div>
 
