--- a/account.html
+++ b/account.html
@@ -82,7 +82,7 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
           <label for="pass" data-translate>*Password:</label>
           <input type="text" name="pass" id="pass" placeholder="password" minlength="4" maxlength="12" size="14" required>
         </p>
-        <input type="submit" value="send">
+        <input type="submit" value="Send">
         <p class="link" onclick="logregForms(0, 1)" data-translate>Registration form</p>
       </form>
     </div>
@@ -98,7 +98,7 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
           <label for="pass" data-translate>*Password:</label>
           <input type="text" name="pass" id="pass" placeholder="password" minlength="4" maxlength="12" size="14" required>
         </p>
-        <input type="submit" value="send">
+        <input type="submit" value="Send">
         <p class="link" onclick="logregForms(1, 0)" data-translate>Login form</p>
       </form>
     </div>
