--- a/account.html
+++ b/account.html
@@ -74,10 +74,10 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
       <form class="centered" action="javascript:;" onsubmit="login(uname.value, pass.value);">
         <p data-translate="">Login form</p>
         <p data-translate>*Username:</p>
-        <input type="text" name="uname" id="uname" placeholder="yourusername" minlength="4" maxlength="12" size="14"
+        <input type="text" name="uname" id="uname" placeholder="username" minlength="4" maxlength="12"
           pattern="[A-Za-zА-Яа-яЁё0-9]{4,12}" title="Write your alphanumeric username (4-12 symbols)" required>
         <p data-translate>*Password:</p>
-        <input type="text" name="pass" id="pass" placeholder="yourpassword" minlength="4" maxlength="12" size="14" required>
+        <input type="text" name="pass" id="pass" placeholder="password" minlength="4" maxlength="12" required>
         <p class="link" onclick="logregForms(0, 1)" data-translate>Registration form</p>
         <input type="submit" value="Send">
       </form>
@@ -86,18 +86,18 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
       <form class="centered" action="javascript:;" onsubmit="register(uname.value, pass.value, fname.value, lname.value, mail.value, tg.value);">
         <p data-translate="">Registration form</p>
         <p data-translate>*Username:</p>
-        <input type="text" name="uname" id="uname" placeholder="yourusername" minlength="4" maxlength="12" size="14"
+        <input type="text" name="uname" id="uname" placeholder="username" minlength="4" maxlength="12"
           pattern="[A-Za-zА-Яа-яЁё0-9]{4,12}" title="Come up with an alphanumeric username (4-12 symbols)" required>
         <p data-translate>*First name:</p>
-        <input type="text" name="fname" id="fname" placeholder="Elon" minlength="2" maxlength="20" size="14" required>
+        <input type="text" name="fname" id="fname" placeholder="Elon" minlength="2" maxlength="20"required>
         <p data-translate>*Last name:</p>
-        <input type="text" name="lname" id="lname" placeholder="Musk" minlength="2" maxlength="20" size="14" required>
+        <input type="text" name="lname" id="lname" placeholder="Musk" minlength="2" maxlength="20"required>
         <p data-translate>*Password:</p>
-        <input type="text" name="pass" id="pass" placeholder="yourpassword" minlength="4" maxlength="12" size="14" required>
+        <input type="text" name="pass" id="pass" placeholder="password" minlength="4" maxlength="12"required>
         <p data-translate>Email:</p>
-        <input type="email" name="mail" id="mail" placeholder="yourmail@domain.tld" minlength="4" maxlength="26" size="14">
+        <input type="email" name="mail" id="mail" placeholder="yourmail@domain.tld" minlength="4" maxlength="26">
         <p data-translate>Telegram:</p>
-        <input type="text" name="tg" id="tg" placeholder="@username" minlength="4" maxlength="20" size="14">
+        <input type="text" name="tg" id="tg" placeholder="@username" minlength="4" maxlength="20">
         <p class="link" onclick="logregForms(1, 0)" data-translate>Login form</p>
         <input type="submit" value="Send">
       </form>
