--- a/index.html
+++ b/index.html
@@ -70,10 +70,15 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
   </div>
 
   <div id="content">
-    <p style="font-size: 50vw; text-align: center;">ind</p>
+    <div id="imgs">
+      <img src="src/imgs/ma-icon.png" alt="icon">
+      <img src="src/imgs/mr-icon.png" alt="icon">
+    </div>
+    <p></p>
   </div>
 
   <link rel="stylesheet" href="src/css/index.css">
   <script src="src/js/main.js"></script>
+  <script src="src/js/index.js"></script>
 </body>
 </html>
