--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
       <img src="src/imgs/ma-icon.png" alt="icon">
       <img src="src/imgs/mr-icon.png" alt="icon">
     </div>
-    <p></p>
+    <div class="text">
+      <p>Ma_dot is <i class="link">my (Mapagmataas')</i> website with current projects</p>
+    </div>
   </div>
 
   <link rel="stylesheet" href="src/css/index.css">
