--- a/author.html
+++ b/author.html
@@ -75,5 +75,6 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
 
   <link rel="stylesheet" href="src/css/author.css">
   <script src="src/js/main.js"></script>
+  <script src="src/js/author.js"></script>
 </body>
 </html>
