--- a/author.html
+++ b/author.html
@@ -74,14 +74,17 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
       <div class="img-block">
         <div id="img"></div>
         <div class="primary-text">
-          <p>TEXT1 TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT</p>
+          <p>Full Name: Anashin Timofey Sergeevich</p>
+          <p>Username: Mapagmataas</p>
+          <p>Age: 19 (13.12.2003)</p>
+          <p>City: Russia, Novosibirsk</p>
         </div>
       </div>
       <div class="second-text">
-        <p>TEXT2 TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT</p>
+        <p>Proin ullamcorper elementum cursus. Integer condimentum justo arcu, vitae efficitur mauris posuere vitae. Nunc in volutpat est. Vivamus eleifend arcu sed leo ullamcorper laoreet. Praesent finibus sapien eu nisi finibus, vitae vulputate nisi fringilla. Etiam volutpat sapien in dolor volutpat, vitae aliquam nisi finibus. Sed pharetra justo non purus ultrices dignissim. Sed id felis ante. Cras nec orci leo. Duis tempus malesuada iaculis. Morbi condimentum neque ac augue tincidunt aliquam.</p>
       </div>
       <div class="second-text">
-        <p>TEXT3 TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis enim feugiat, vestibulum metus at, efficitur arcu. Sed consectetur libero eu metus aliquam commodo. In feugiat nulla at quam aliquet, a tincidunt urna congue. Sed fringilla, lorem in tincidunt luctus, nisl felis varius odio, in maximus ligula ex sed mi. Donec bibendum efficitur nisl eu tempus.</p>
       </div>
     </div>
   </div>
