--- a/author.html
+++ b/author.html
@@ -74,10 +74,10 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
       <div class="img-block">
         <div id="img"></div>
         <div class="primary-text">
-          <p data-translate>Name: Anashin Timofey</p>
-          <p data-translate>Username: Mapagmataas</p>
-          <p data-translate>Age: 19 (12.13.2003)</p>
-          <p data-translate>City: Russia, Novosibirsk</p>
+          <p data-translate>Name: <b>Anashin Timofey</b></p>
+          <p data-translate>Username: <b>Mapagmataas</b></p>
+          <p data-translate>Age: <b>19</b> (12.13.2003)</p>
+          <p data-translate>City: Russia, <b>Novosibirsk</b></p>
         </div>
       </div>
       <div class="second-text">
