--- a/author.html
+++ b/author.html
@@ -77,14 +77,40 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
           <p data-translate>Name: <b>Anashin Timofey</b></p>
           <p data-translate>Username: <b>Mapagmataas</b></p>
           <p data-translate>Age: <b>19</b> (12.13.2003)</p>
-          <p data-translate>City: Russia, <b>Novosibirsk</b></p>
+          <p data-translate>Location: Russia, <b>Novosibirsk</b></p>
         </div>
       </div>
       <div class="second-text">
-        <p data-translate>&nbsp;&nbsp;&nbsp;&nbsp;Proin ullamcorper elementum cursus. Integer condimentum justo arcu, vitae efficitur mauris posuere vitae. Nunc in volutpat est. Vivamus eleifend arcu sed leo ullamcorper laoreet. Praesent finibus sapien eu nisi finibus, vitae vulputate nisi fringilla. Etiam volutpat sapien in dolor volutpat, vitae aliquam nisi finibus. Sed pharetra justo non purus ultrices dignissim. Sed id felis ante. Cras nec orci leo. Duis tempus malesuada iaculis. Morbi condimentum neque ac augue tincidunt aliquam.</p>
-      </div>
-      <div class="second-text">
-        <p data-translate>&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis enim feugiat, vestibulum metus at, efficitur arcu. Sed consectetur libero eu metus aliquam commodo. In feugiat nulla at quam aliquet, a tincidunt urna congue. Sed fringilla, lorem in tincidunt luctus, nisl felis varius odio, in maximus ligula ex sed mi. Donec bibendum efficitur nisl eu tempus.</p>
+        <p data-translate>Education:</p>
+        <p data-translate>Novocollege KIT College, Novosibirsk, Russia</p>
+        <p data-translate>Degree in Information Systems and Programming</p>
+        <p data-translate>Expected Graduation: 2025</p>
+        <br/>
+        <p data-translate>Skills:</p>
+        <p data-translate>Programming Languages: HTML, JavaScript, C, Golang, C#, Python, SQL</p>
+        <p data-translate>Familiarity with C++ and Rust</p>
+        <p data-translate>Problem-solving and analytical thinking</p>
+        <p data-translate>Strong attention to detail</p>
+        <p data-translate>Ability to work both independently and in a team</p>
+        <p data-translate>Excellent communication and interpersonal skills</p>
+        <br/>
+        <p data-translate>Projects:</p>
+
+        <p data-translate>[Project Name]</p>
+        <p data-translate>Description: [Briefly describe the project and your role in it]</p>
+        <p data-translate>Technologies used: [List the programming languages and tools used]</p>
+        <br/>
+        <p data-translate>[Project Name]</p>
+        <p data-translate>Description: [Briefly describe the project and your role in it]</p>
+        <p data-translate>Technologies used: [List the programming languages and tools used]</p>
+        <br/>
+        <p data-translate>Languages:</p>
+        <p data-translate>Russian (Native proficiency)</p>
+        <p data-translate>English (Fluent)</p>
+        <br/>
+        <p data-translate>Contact Information:</p>
+        <p data-translate>Email: ma.group.box@gmail.com</p>
+        <p data-translate>Telegram: @mapagmataas</p>
       </div>
     </div>
   </div>
