--- a/author.html
+++ b/author.html
@@ -81,12 +81,12 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
         </div>
       </div>
       <div class="second-text">
-        <p data-translate>Education:</p>
-        <p data-translate>Novocollege KIT College, Novosibirsk, Russia</p>
+        <p data-translate><b>Education:</b></p>
+        <p data-translate>Novocollege KIT(College of Information Technology)</p>
         <p data-translate>Degree in Information Systems and Programming</p>
         <p data-translate>Expected Graduation: 2025</p>
         <br/>
-        <p data-translate>Skills:</p>
+        <p data-translate><b>Skills:</b></p>
         <p data-translate>Programming Languages: HTML, JavaScript, C, Golang, C#, Python, SQL</p>
         <p data-translate>Familiarity with C++ and Rust</p>
         <p data-translate>Problem-solving and analytical thinking</p>
@@ -94,7 +94,7 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
         <p data-translate>Ability to work both independently and in a team</p>
         <p data-translate>Excellent communication and interpersonal skills</p>
         <br/>
-        <p data-translate>Projects:</p>
+        <p data-translate><b>Projects:</b></p>
 
         <p data-translate>[Project Name]</p>
         <p data-translate>Description: [Briefly describe the project and your role in it]</p>
@@ -104,11 +104,11 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
         <p data-translate>Description: [Briefly describe the project and your role in it]</p>
         <p data-translate>Technologies used: [List the programming languages and tools used]</p>
         <br/>
-        <p data-translate>Languages:</p>
+        <p data-translate><b>Languages:</b></p>
         <p data-translate>Russian (Native proficiency)</p>
         <p data-translate>English (Fluent)</p>
         <br/>
-        <p data-translate>Contact Information:</p>
+        <p data-translate><b>Contact Information:</b></p>
         <p data-translate>Email: ma.group.box@gmail.com</p>
         <p data-translate>Telegram: @mapagmataas</p>
       </div>
