--- a/author.html
+++ b/author.html
@@ -70,49 +70,48 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
   </div>
 
   <div id="content">
-    <div>
-      <div class="img-block">
-        <div id="img"></div>
-        <div class="primary-text">
-          <p data-translate>Name: <b>Anashin Timofey</b></p>
-          <p data-translate>Username: <b>Mapagmataas</b></p>
-          <p data-translate>Age: <b>19</b> (12.13.2003)</p>
-          <p data-translate>Location: Russia, <b>Novosibirsk</b></p>
-        </div>
-      </div>
-      <div class="second-text">
-        <p data-translate><b>Education:</b></p>
-        <p data-translate>Novocollege KIT(College of Information Technology)</p>
-        <p data-translate>Degree in Information Systems and Programming</p>
-        <p data-translate>Expected Graduation: 2025</p>
-        <br/>
-        <p data-translate><b>Skills:</b></p>
-        <p data-translate>Programming Languages: HTML, JavaScript, C, Golang, C#, Python, SQL</p>
-        <p data-translate>Familiarity with C++ and Rust</p>
-        <p data-translate>Problem-solving and analytical thinking</p>
-        <p data-translate>Strong attention to detail</p>
-        <p data-translate>Ability to work both independently and in a team</p>
-        <p data-translate>Excellent communication and interpersonal skills</p>
-        <br/>
-        <p data-translate><b>Projects:</b></p>
-
-        <p data-translate>[Project Name]</p>
-        <p data-translate>Description: [Briefly describe the project and your role in it]</p>
-        <p data-translate>Technologies used: [List the programming languages and tools used]</p>
-        <br/>
-        <p data-translate>[Project Name]</p>
-        <p data-translate>Description: [Briefly describe the project and your role in it]</p>
-        <p data-translate>Technologies used: [List the programming languages and tools used]</p>
-        <br/>
-        <p data-translate><b>Languages:</b></p>
-        <p data-translate>Russian (Native proficiency)</p>
-        <p data-translate>English (Fluent)</p>
-        <br/>
-        <p data-translate><b>Contact Information:</b></p>
-        <p data-translate>Email: ma.group.box@gmail.com</p>
-        <p data-translate>Telegram: @mapagmataas</p>
+    <div class="img-block">
+      <div id="img"></div>
+      <div class="primary-text">
+        <p data-translate>Name: <b>Anashin Timofey</b></p>
+        <p data-translate>Username: <b>Mapagmataas</b></p>
+        <p data-translate>Age: <b>19</b> (12.13.2003)</p>
+        <p data-translate>Location: Russia, <b>Novosibirsk</b></p>
       </div>
     </div>
+    <div class="second-text">
+      <p data-translate><b>Education:</b></p>
+      <p data-translate>Novocollege KIT(College of Information Technology)</p>
+      <p data-translate>Degree in Information Systems and Programming</p>
+      <p data-translate>Expected Graduation: 2025</p>
+      <br/>
+      <p data-translate><b>Skills:</b></p>
+      <p data-translate>Programming Languages: HTML, JavaScript, C, Golang, C#, Python, SQL</p>
+      <p data-translate>Familiarity with C++ and Rust</p>
+      <p data-translate>Problem-solving and analytical thinking</p>
+      <p data-translate>Strong attention to detail</p>
+      <p data-translate>Ability to work both independently and in a team</p>
+      <p data-translate>Excellent communication and interpersonal skills</p>
+      <br/>
+      <p data-translate><b>Projects:</b></p>
+
+      <p data-translate>[Project Name]</p>
+      <p data-translate>Description: [Briefly describe the project and your role in it]</p>
+      <p data-translate>Technologies used: [List the programming languages and tools used]</p>
+      <br/>
+      <p data-translate>[Project Name]</p>
+      <p data-translate>Description: [Briefly describe the project and your role in it]</p>
+      <p data-translate>Technologies used: [List the programming languages and tools used]</p>
+      <br/>
+      <p data-translate><b>Languages:</b></p>
+      <p data-translate>Russian (Native proficiency)</p>
+      <p data-translate>English (Fluent)</p>
+      <br/>
+      <p data-translate><b>Contact Information:</b></p>
+      <p data-translate>Email: ma.group.box@gmail.com</p>
+      <p data-translate>Telegram: @mapagmataas</p>
+    </div>
+    <div id="background"></div>
   </div>
 
   <link rel="stylesheet" href="src/css/author.css">
